# twm24l

./: .gitignore  README.md  data_utils.py  hog.py  main.ipynb  pyproject.toml  ssd.ipynb  utils.py  vis_utils.py
hog/: hog.py  hog_main.py  training_data.py
